--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@astrojs/check": "^0.3.1",
     "@astrojs/tailwind": "^5.0.3",
+    "@fontsource-variable/roboto-slab": "^5.0.18",
+    "@fontsource/poppins": "^5.0.8",
     "astro": "^4.0.3",
     "tailwindcss": "^3.3.6",
     "typescript": "^5.3.3"
